--- a/style.css
+++ b/style.css
@@ -387,6 +387,7 @@ textarea:focus {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    object-position: center;
 }
 
 .trip-content {
